resolved issue not uploading image while creating more products updated view for index making the cards aligned on the home page

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -48,3 +48,8 @@ body {
 .book-author {
     font-size: 0.85rem;
 }
+
+.card-img-top {
+    height: 300px;
+    object-fit: cover;
+}
